--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@nestjs/swagger": "^11.0.3",
     "@prisma/client": "^6.2.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.14",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
