--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.0.3",
     "@prisma/client": "^6.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.14",
+    "@types/multer": "^1.4.12",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.2.1",
